# clouni

./: .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TOSCA_definition_1_0.yaml  TOSCA_non_normative_definition_1_0.yaml  amazon-cluster-test.yaml  api_pb2_grpc.py  clouni.cfg  clouni_root_pointer  dockerfile  openstack-cluster-test.yaml  requirements-amazon.txt  requirements-ansible.txt  requirements-cotea.txt  requirements-grpc.txt  requirements-rest.txt  requirements.txt  setup.cfg  setup.py  tosca-server-example.yaml  tosca_tool.py
examples/: ansible-example-amazon.yaml  ansible-example-openstack.yaml  ansible-operation-example.yaml  ansible-server-example.yaml  ansible-tosca-validate-example.yaml  facts-amazon.json  facts-openstack.json  full_nfv_example.yaml  full_nfv_result.yaml  get_openstack_facts.yaml  testing-example-endpoint-capabilities.yaml  testing-example-host-capabilities.yaml  testing-example-network-name.yaml  testing-example-os-capabilities.yaml  testing-example-public-address.yaml  testing-example.yaml  tosca-network-and-port-example-ansible-amazon.yaml  tosca-network-and-port-example-ansible-async-openstack.yaml  tosca-network-and-port-example-ansible-delete-openstack.yaml  tosca-network-and-port-example-ansible-openstack.yaml  tosca-network-and-server-example.yaml  tosca-server-example-amazon.yaml  tosca-server-example-ansible-amazon.yaml  tosca-server-example-ansible-async-openstack.yaml  tosca-server-example-ansible-delete-openstack.yaml  tosca-server-example-ansible-openstack.yaml  tosca-server-example-hostedon.yaml  tosca-server-example-kubernetes.yaml  tosca-server-example-openstack-generated-template.yaml  tosca-server-example-openstack.yaml  tosca-server-example-register.json  tosca-server-example-scalable.yaml  tosca-server-example.yaml  tosca-server-scalable-example.yaml  tosca-volume-correct.yaml  tosca-volume-example.yaml
grpc_clouni/: api.proto  api_pb2.py  api_pb2_grpc.py  clouni_client.py  clouni_server.py
launcher-templates/: master-with-ip-pool.yaml  master-without-ip-pool.yaml  slaves-with-ip-pool.yaml  slaves-without-ip-pool.yaml  storage-with-ip-pool.yaml  storage-without-ip-pool.yaml
my_definitions/: nfv_definintion.yaml
my_examples/: configure_cirros.yaml  configure_conn.yaml  id_vars_example.yaml  netw_info.yaml  ports.yaml  project  project.tosca  project.yaml  project_t.tosca  test.tosca  test.yaml  test_inc.yaml  test_network.yaml  test_old.yaml  vars-file.yaml
my_templates/: configure.yaml  configure_router.yaml  project.tosca
rest_clouni/: Dockerfile  app.py
samples/: id_vars_example.yaml  playbook.yaml  sample.yaml  sample_from_Alex.yaml
shell_clouni/: shell.py
(+204 files in other folders)
