[metadata]
name = clouni
summary = Cloud Application Management Tool by TOSCA.
description-file = README.md
author = bura2017
author-email = shvetcova@ispras.ru
classifier =
    Environment :: ISP RAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    toscatranslator

[entry_points]
console_scripts =
    clouni = toscatranslator.shell:main

[compile_catalog]
directory = toscatranslator/locale
domain = toscatranslator

[update_catalog]
domain = toscatranslator
output_dir = toscatranslator/locale
input_file = toscatranslator/locale/toscatranslator.pot
