[metadata]
name = clouni
version = 0.0.1
summary = Cloud Application Management Tool by TOSCA.
description-file = README.md
author = bura2017
author-email = shvetcova@ispras.ru
classifier =
    Environment :: ISP RAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:

[options.entry_points]
console_scripts =
    clouni = toscatranslator.shell:main

[options.packages.find]
exclude =
    testing
    .ansible
