[metadata]
name = clouni
version = 0.0.1
summary = Cloud Application Management Tool by TOSCA.
description-file = README.md
author = bura2017
author-email = shvetcova@ispras.ru
classifier =
    Environment :: ISP RAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    toscatranslator
    grpc_clouni
    shell_clouni

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    clouni = shell_clouni.shell:main
    clouni-server = grpc_clouni.clouni_server:serve
    clouni-client = grpc_clouni.clouni_client:main

[options.packages.find]
exclude =
    testing
    .ansible
